--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -27,7 +27,7 @@
   <title>Online Pet Shop</title>
 </head>
 
-<body style="background-image: url('Homepage.jpg');background-repeat: no-repeat; background-attachment: fixed;
+<body style="background-image: url('HomePage1.jpg');background-repeat: no-repeat; background-attachment: fixed;
 background-size:cover;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
